@@ -1,5 +1,7 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: band-aid test for tag->tagno != NULL for now. better needs doing.
+    - jbj: fix: --changelog segfault from rpmpopt.in typo.
     - rse: fallback to xmalloc+strncpy if strndup is not available in filetriggers code
     - pixel: add filetriggers support.
     - rse: configure: do not complain with "python: file not found" on platforms without python(1) in PATH
